force-app/main/default/objects/Universal_App_Field_Setting__mdt/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <inlineHelpText>For File Uploads that create a Document record, should match to a Type__c value on the Document__c record.</inlineHelpText>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>