force-app/main/default/objects/Universal_App_Field_Setting__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <label>Field Name (Deprecated)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>