force-app/main/default/objects/Universal_App_Field_Setting__mdt/listViews/Files.listView-meta.xml
<ListView>
    <fullName>Files</fullName>
    <columns>MasterLabel</columns>
    <columns>Universal_App_Section__c</columns>
    <columns>DeveloperName</columns>
    <columns>Field_Name__c</columns>
    <columns>Accepted_File_Types__c</columns>
    <columns>DocumentType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>File</value>
    </filters>
    <label>Files</label>
</ListView>