force-app/main/default/objects/Universal_App_Field_Setting__mdt/listViews/School_Renewal_Fields.listView-meta.xml
<ListView>
    <fullName>School_Renewal_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Universal_App_Section__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Universal_App_Section__c</field>
        <operation>startsWith</operation>
        <value>SR</value>
    </filters>
    <label>School Renewal Fields</label>
</ListView>